--- a/style.css
+++ b/style.css
@@ -4,15 +4,28 @@ body {
 	font-family: 'Oswald', sans-serif;
 	text-align: center;
 }
-ul {
-	list-style:none;
+.nav{
+	font-size: 15px;
+}
+.navbar-brand {
+	font-size: 30px;
 }
 li {
 	display: inline;
-	margin: 20px;
 }
 a {
 	text-decoration: none;
-	
 	color: #bdbdbd;
+}
+.orange {
+	color: #FF4500;
+}
+.whiteHeader {
+	color: white;
+}
+#displayPic {
+	width: 30%;
+	height: 30%;
+	border-radius: 50%;
+	margin: 30px;
 }
