--- a/style.css
+++ b/style.css
@@ -29,3 +29,12 @@ a {
 	border-radius: 50%;
 	margin: 30px;
 }
+.thumbnail:hover {
+	height: 105%;
+	width: 105%;
+	margin: 0 auto;
+}
+.row {
+	margin: 0 auto;
+	text-align: center;
+}
